--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /DynamicClassBuilder/obj/Debug
+/DynamicClassBuilder/bin/Debug
