--- a/DynamicClassBuilder/DynamicClassBuilder.csproj
+++ b/DynamicClassBuilder/DynamicClassBuilder.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Builder.cs" />
+    <Compile Include="Dynamic.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
